<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_root_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.ChatActivity">
    <LinearLayout
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_chat_title_string"
            android:textColor="@color/color_202034"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container"
        app:layout_constraintLeft_toLeftOf="@id/chat_toolbar"
        app:layout_constraintRight_toRightOf="@id/chat_toolbar"
        app:layout_constraintTop_toBottomOf="@id/chat_toolbar" />

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_FFFFFF"
        android:gravity="left|center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="8dp"
        android:paddingRight="15dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/chat_face_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/chat_face"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@color/color_FFFFFF"
            android:src="@drawable/chat_face" />

        <ImageView
            android:id="@+id/chat_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@color/color_FFFFFF"
            android:src="@drawable/chat_img" />

        <EditText
            android:id="@+id/chat_content_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/chat_edit_style"
            android:hint="@string/activity_chat_input_hint_string"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_send_style_y"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="8dp"
            android:paddingRight="15dp"
            android:paddingBottom="8dp"
            android:text="@string/activity_chat_send_string"
            android:textColor="@color/color_FFFFFF" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/chat_face_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>