<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MsgBoardActivity">

    <RelativeLayout
        android:id="@+id/mb_chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mb_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/mb_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_MB_title_string"
            android:textColor="@color/color_202034"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mb_header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_chat_toolbar"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@mipmap/mb_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/mb_header_content_string"
            android:textColor="@color/color_A1A6AB" />
    </LinearLayout>

    <com.mantis.imview.ui.views.MsgBoardItem
        android:id="@+id/mb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_header_view" />
    <ImageView
        android:id="@+id/mb_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_E4E4E4"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_name" />

    <com.mantis.imview.ui.views.MsgBoardItem
        android:id="@+id/mb_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_line" />

    <EditText
        android:id="@+id/mb_content"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_FFFFFF"
        android:gravity="top"
        android:hint="请输入留言内容..."
        android:padding="16dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_phone" />

    <TextView
        android:id="@+id/mb_submit_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/chat_send_style_y"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/mb_submit_string"
        android:textColor="@color/color_FFFFFF"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mb_content" />
</androidx.constraintlayout.widget.ConstraintLayout>